--- a/test/test_architectures_fake_data.ipynb
+++ b/test/test_architectures_fake_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,26 +92,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Architecture Init\n",
     "mmg_model = MMG(mmg_hidden_dim, mmg_output_dim)\n",
     "crg_model = CRG(crg_mlp_dim, crg_hidden_dim, crg_output_dim)\n",
-    "rrg_model = RRG(rrg_mlp_dim, rrg_hidden_dim, rrg_output_dim)"
+    "#rrg_model = RRG(rrg_mlp_dim, rrg_hidden_dim, rrg_output_dim)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(16, 12, 1)\n"
+      "(16, 12, 12)\n",
+      "(16, 12, 12)\n",
+      "tf.Tensor(\n",
+      "[[[0.49993828 0.510495   0.50846714 ... 0.5057817  0.5068571  0.50308305]\n",
+      "  [0.5036193  0.5133131  0.51352936 ... 0.5102502  0.5121088  0.50747216]\n",
+      "  [0.49928814 0.5077107  0.5074461  ... 0.50467527 0.50615984 0.50339735]\n",
+      "  ...\n",
+      "  [0.5018156  0.5112687  0.5105842  ... 0.5079068  0.5096881  0.5058505 ]\n",
+      "  [0.5016655  0.5098252  0.5096593  ... 0.5058663  0.50736564 0.50339943]\n",
+      "  [0.4954424  0.5022747  0.5027039  ... 0.49930978 0.5018141  0.4971949 ]]\n",
+      "\n",
+      " [[0.5014205  0.5021823  0.50315773 ... 0.49484026 0.49915767 0.5020927 ]\n",
+      "  [0.5036763  0.5040846  0.50562805 ... 0.49825925 0.50334406 0.5062331 ]\n",
+      "  [0.50448596 0.50473017 0.506808   ... 0.49861753 0.5038445  0.50726575]\n",
+      "  ...\n",
+      "  [0.5074161  0.5070909  0.5095246  ... 0.5005175  0.50475085 0.5082704 ]\n",
+      "  [0.50670046 0.5070573  0.50865126 ... 0.5009067  0.5051628  0.50778097]\n",
+      "  [0.50878024 0.5067932  0.50822747 ... 0.49957946 0.5044086  0.50817055]]\n",
+      "\n",
+      " [[0.5068977  0.5091038  0.5064744  ... 0.5094071  0.50778234 0.50907683]\n",
+      "  [0.5036623  0.50438356 0.5058959  ... 0.506276   0.5052386  0.50838286]\n",
+      "  [0.49627343 0.50020516 0.4967389  ... 0.5000047  0.49731052 0.49918815]\n",
+      "  ...\n",
+      "  [0.5057362  0.5073052  0.5064862  ... 0.5070933  0.5064349  0.50689965]\n",
+      "  [0.5087463  0.5097473  0.51066697 ... 0.51090825 0.5101088  0.5114186 ]\n",
+      "  [0.50208277 0.50453234 0.5020981  ... 0.50522    0.5029065  0.5032911 ]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[0.5021115  0.5036021  0.504969   ... 0.50611556 0.49908003 0.5049928 ]\n",
+      "  [0.5114679  0.5103698  0.5159162  ... 0.51334524 0.5094422  0.5140047 ]\n",
+      "  [0.50507843 0.50588286 0.5114198  ... 0.5099158  0.5030699  0.5090523 ]\n",
+      "  ...\n",
+      "  [0.5022704  0.5031726  0.50658745 ... 0.50603664 0.49942267 0.5062284 ]\n",
+      "  [0.50624394 0.5077148  0.5124521  ... 0.5108479  0.50478023 0.509399  ]\n",
+      "  [0.50257826 0.5028443  0.5066504  ... 0.504379   0.4993791  0.505913  ]]\n",
+      "\n",
+      " [[0.49956775 0.49662298 0.5020109  ... 0.50573474 0.49786296 0.4979515 ]\n",
+      "  [0.5040171  0.50068027 0.5050025  ... 0.508244   0.50073236 0.50039977]\n",
+      "  [0.50417143 0.50219846 0.5066299  ... 0.50880694 0.50188196 0.50101155]\n",
+      "  ...\n",
+      "  [0.51072085 0.50864047 0.5137068  ... 0.5181186  0.5101433  0.50639915]\n",
+      "  [0.50223696 0.49976364 0.50640726 ... 0.50710213 0.50189346 0.49902332]\n",
+      "  [0.5055519  0.5023908  0.5065356  ... 0.5099909  0.50290155 0.5020469 ]]\n",
+      "\n",
+      " [[0.5069934  0.5096385  0.5068213  ... 0.511904   0.5015505  0.5031892 ]\n",
+      "  [0.507648   0.5114145  0.5081106  ... 0.51365036 0.50438946 0.50335777]\n",
+      "  [0.5040664  0.50809735 0.5052327  ... 0.50866115 0.4995983  0.49966753]\n",
+      "  ...\n",
+      "  [0.5019842  0.5045163  0.50192225 ... 0.5074493  0.49798253 0.4995926 ]\n",
+      "  [0.505364   0.5063631  0.50259215 ... 0.5108207  0.5015005  0.50148964]\n",
+      "  [0.50346786 0.5080157  0.50460565 ... 0.50863326 0.4994251  0.49955574]]], shape=(16, 12, 12), dtype=float32)\n"
      ]
     }
    ],
@@ -127,7 +178,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train_step \n",
+    "# j'ai mis la sortie en target juste pr être sur d'avoir les bnes dimensions\n",
+    "target = mmg_output\n",
+    "mmg_model.train_step([adjacency, node_features, edge_features], target )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +244,7 @@
    "hash": "7b4b4feff2f24a0f0a34464dbe537a36fda679851528fb8735cb41fa49dffb2d"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -195,9 +258,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
-  },
-  "orig_nbformat": 4
+   "version": "3.8.8"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
